--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "escape-regexp": "^0.0.1",
     "express": "^4.19.2",
     "mongodb": "^6.5.0"
   }
