--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "dotenv": "^16.4.5",
     "escape-regexp": "^0.0.1",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.5.0"
   }
-  
 }
