--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "escape-regexp": "^0.0.1",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.5.0"
+    "mongodb": "^6.5.0",
+    "stripe": "^15.8.0"
   }
 }
