--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "escape-regexp": "^0.0.1",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.5.0",
-    "stripe": "^15.8.0"
+    "node-global-storage": "^2.0.0",
+    "stripe": "^15.8.0",
+    "uuid": "^9.0.1"
   }
 }
